inhanced the search

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
                 <div class="row">
                     <img src="resources/img/ts logo.jpg" alt="toxic sushi logo" class="logo rounded-circle">
                     <a href="index.html" id="home_link" class="header_links">Home</a>
-                    <a href="search" id="search_restaurants_link" class="header_links">Search Restaurants</a>
-                    <a href="places" id="search_fun_places_link" class="header_links">Search Fun Places</a>
+                    <a href="search.html" id="search_restaurants_link" class="header_links">Search Restaurants</a>
+                    <a href="places.html" id="search_fun_places_link" class="header_links">Search Fun Places</a>
                     <a href="view_favorites" id="my_favorites_link" class="header_links">My Favorites</a>
                 </div>
             </nav>
