closing the slidebar on click

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
                               <span></span>
                           </div>
                           <ul >
-                              <li id="subscribe-btn" data-toggle="modal" data-target="#modal_4">Sign up</li>
-                              <li  id="subscribe-btn" data-toggle="modal" data-target="#modal_5">Sign in</li>
+                              <li class="subscribe-btn" data-toggle="modal" data-target="#modal_4">Sign up</li>
+                              <li class="subscribe-btn" data-toggle="modal" data-target="#modal_5">Sign in</li>
                               <li id="signout_button">Sign out</li>
                           </ul>
 
