added user sign-in validation against database

--- a/public/index.html
+++ b/public/index.html
@@ -394,7 +394,7 @@
                                                 <figure class="meal-photo" id="sandwhich">
                                                     
                                                     <img src="resources/img/sandwhich.jpg" alt="sandwhich_food">
-                                                    <div class="meal-header">sandwhiches</div> 
+                                                    <div class="meal-header">Sandwiches</div> 
                                                 </figure>
                                             </li>
                                             <li>
